Avoid layout shift in info section

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body > * {
 
 #info {
   margin-bottom: 32px;
+  height: 125px;
 }
 
 h1 {
